--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
-	<head>	
-		<meta charset="utf-8">
-		<title>Sample App|Help</title>
-	</head	
-	<body>
-		<h1>Help</h1>
-		<p>This is the second static view file I am playing with.</p>
-	</body
-<html>
+<% provide(:title, 'Help')%>
+
+<title>Sample App|<%= yield(:title)%></title>
+<h1>Help</h1>
+<p>This is the second static view file I am playing with.</p>
