--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
-	<head>	
-		<meta charset="utf-8">
-		<title>Sample App|Home</title>
-	</head	
-	<body>
-		<h1>Sample App</h1>
-		<p>This is the first static view file I am playing with.</p>
-	</body
-<html>
+<% provide(:title, 'Home')%>
+
+<title>Sample App|<%= yield(:title)%></title>
+<h1>Sample App</h1>
+<p>This is the first static view file I am playing with.</p>
