--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center hero-unit">
 	<h1>Sample App</h1>
 	<h2>This is the first static view file I am playing with.</h2>
-	<%= link_to "Sign up now!", '#', class:'btn btn-large btn-primary' %> 
+	<%= link_to "Sign up now!", signup_path, class:'btn btn-large btn-primary' %> 
 </div>
 
 <%= link_to image_tag("sampleApp-logo.png", alt:'Rails'), 'http://rabirajmalla.com' %>
